--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "nuxt": "^3.9.3",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "dayjs": "^1.11.10",
+    "vue-tailwind-datepicker": "^1.6.1",
+    "vue3-datepicker": "^0.4.0"
   }
 }
