--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@vuepic/vue-datepicker": "^7.4.1",
     "dayjs": "^1.11.10",
+    "sass": "^1.70.0",
     "vue-tailwind-datepicker": "^1.6.1",
-    "vue3-datepicker": "^0.4.0"
+    "vue-tippy": "v6",
+    "vue3-datepicker": "^0.4.0",
+    "vue3-star-ratings": "^3.0.5"
   }
 }
